# DaPTools

./: README.md  pyproject.toml
src/daptools/: MRIDValidator.py  binUtils.py  cleanDir.py  fileHasher.py  generateSHA.py  mathPhys.py  myTools.py  sphericalGeodesy.py  unitsBatch.py  velikonoce.py
src/myTools/: unitsBatch.py
src/strojarina/: deleni.py
tests/: testBinUtils.py  testCleanDir.py  testFileHasher.py  testGenerateSHA.py  testLaTeXHelper.py  testLogger.py  testMRIDValidator.py  testMathPhys.py  testMyTools.py  testRandomPasswordGen.py  testSphericalGeodesy.py  testStandardAtmosphere.py  testUnitsBatch.py  testVelikonoce.py
