[tool.poetry]
name = "daptools"
version = "1.1.0"
description = "Personal tools for Python programming - utilities, math, file operations"
authors = ["David Potucek <davidpotucek@protonmail.ch>"]
readme = "README.md"
packages = [{include = "daptools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
